--- a/src/app/kanban/kanban-board/full-card/full-card.component.html
+++ b/src/app/kanban/kanban-board/full-card/full-card.component.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="input-assigned-to">
-      <span>Assignet To:</span>
+      <span>Assigned To:</span>
       <div class="user-priority">
         @for (user of task.assignedTo; track $index) {
         <div class="user-details">
