--- a/src/app/kanban/kanban.component.scss
+++ b/src/app/kanban/kanban.component.scss
@@ -15,16 +15,18 @@
 }
 
 .kanban-board-content {
-    
     display: flex;
     width: 100%;
     padding: 0em 4em;
     background: #f0f0f0;
     overflow-y: auto;
+
+        @media (max-width:965px) {
+        padding: 0px 10px;
+    }
 }
 
 app-kanban-board {
-
     width: 100%;
 }
 
