--- a/src/app/kanban/kanban-add/kanban-add.component.scss
+++ b/src/app/kanban/kanban-add/kanban-add.component.scss
@@ -201,6 +201,12 @@ section {
           border-radius: 10px;
         }
       }
+
+      button {
+        border: none;
+        background-color: transparent;
+      }
+
       .add,
       .submit-cancel {
         display: flex;
@@ -228,7 +234,7 @@ section {
         .grey-line {
           width: 2px;
           height: 24px;
-          background-color: rgba(128, 128, 128, 0.41);
+          background-color: rgba(196, 196, 196, 0.568);
           margin: 0px 2px;
         }
       }
@@ -286,8 +292,6 @@ section {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  _border: 2px solid rgba(0, 0, 0, 0.151);
-  _border-radius: 10px;
   width: 100%;
   height: 48px;
   padding: 1em;
@@ -336,11 +340,12 @@ section {
     justify-content: center;
     align-items: center;
     background-color: transparent;
-    border: solid rgba(0, 0, 0, 0.049) 2px;
+    border: solid rgba(24, 24, 24, 0.411) 2px;
     border-radius: 10px;
     font-size: 1.8em;
     padding: 8px 10px;
     transition: box-shadow 0.3s ease;
+    margin-right: 1em;
 
     img {
       margin-left: 0.5em;
