highlight function menu
added a highlight function which changed the .active class on every router-event

--- a/src/app/shared/nav-footer-mobile/nav-footer-mobile.component.html
+++ b/src/app/shared/nav-footer-mobile/nav-footer-mobile.component.html
@@ -1,10 +1,10 @@
 <section>
     <nav>
         <ul>
-            <li><a routerLink="/summary"><img src="assets/img/navbar/Summary.png" alt=""><p>Summary</p></a></li>
-            <li><a routerLink="/task"><img src="assets/img/navbar/Add task.png" alt=""><p>Add Task</p></a></li>
-            <li><a routerLink="/board"><img src="assets/img/navbar/Board.png" alt=""><p>Board</p></a></li>
-            <li class="active"><a routerLink="/contacts"><img src="assets/img/navbar/Contacts.png" alt=""><p>Contacts</p></a></li>
+            <a class="summary" routerLink="/summary"><li><img src="assets/img/navbar/Summary.png" alt=""><p>Summary</p></li></a>
+            <a class="task" routerLink="/task"><li><img src="assets/img/navbar/Add task.png" alt=""><p>Add Task</p></li></a>
+            <a class="board" routerLink="/board"><li><img src="assets/img/navbar/Board.png" alt=""><p>Board</p></li></a>
+            <a class="contacts" routerLink="/contacts"><li><img src="assets/img/navbar/Contacts.png" alt=""><p>Contacts</p></li></a>
         </ul>
     </nav>
 </section>
