--- a/src/app/shared/nav-footer-mobile/nav-footer-mobile.component.scss
+++ b/src/app/shared/nav-footer-mobile/nav-footer-mobile.component.scss
@@ -19,35 +19,42 @@ section {
                 justify-content: center;
             }
 
-            li {
+            a {
+                gap: 0.5em;
                 display: flex;
-                flex-direction: column;
-                justify-content: center;
                 align-items: center;
-                text-align: center;
-                font-size: 1rem;
-                font-weight: lighter;
-                margin: 0 2em;
-                padding: 0.3em;
+                color: white;
+                flex-direction: column;
                 width: 100%;
-                height: 100%;
-                border-radius: 1.5em;
 
-                @media (max-width:565px) {
-                    margin: 0;
-                }
-
-                a {
-                    gap: 0.5em;
+                li {
                     display: flex;
-                    align-items: center;
-                    color: white;
                     flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    text-align: center;
+                    font-size: 1rem;
+                    font-weight: lighter;
+                    margin: 0 2em;
+                    padding: 0.3em;
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 1.5em;
+
+                    @media (max-width:565px) {
+                        margin: 0;
+                    }
 
                     @media (max-width:450px) {
                         p {
                             display: none;
                         }
+                    }
+
+
+
+                    img {
+                        opacity: 0.5;
                     }
                 }
 
@@ -55,11 +62,8 @@ section {
                     cursor: pointer;
                     background: #2A3D59;
                 }
-
-                img {
-                    opacity: 0.5;
-                }
             }
+
 
             .active {
                 color: #FFFFFF;
