--- a/src/app/shared/nav-footer/nav-footer.component.html
+++ b/src/app/shared/nav-footer/nav-footer.component.html
@@ -5,15 +5,15 @@
     </div>
     <nav>
         <ul>
-            <li><a routerLink="/summary"><img src="assets/img/navbar/Summary.png" alt="">Summary</a></li>
-            <li><a routerLink="/task"><img src="assets/img/navbar/Add task.png" alt="">Add Task</a></li>
-            <li><a routerLink="/board"><img src="assets/img/navbar/Board.png" alt="">Board</a></li>
-            <li class="active"><a routerLink="/contacts"><img src="assets/img/navbar/Contacts.png" alt="">Contacts</a></li>
+            <a class="summary" (click)="toggleActive('summary')" routerLink="/summary"><li><img src="assets/img/navbar/Summary.png" alt="">Summary</li></a>
+            <a class="task" (click)="toggleActive('task')" routerLink="/task"><li><img src="assets/img/navbar/Add task.png" alt="">Add Task</li></a>
+            <a class="board" (click)="toggleActive('board')" routerLink="/board"><li><img src="assets/img/navbar/Board.png" alt="">Board</li></a>
+            <a class="contacts" (click)="toggleActive('contacts')" routerLink="/contacts"><li><img src="assets/img/navbar/Contacts.png" alt="">Contacts</li></a>
         </ul>
     </nav>
     </div>
     <footer>
-        <a routerLink="/privacy">Privacy Policy</a>
-        <a routerLink="/legalNotice">Legal notice</a>
+        <a (click)="toggleActive('')" routerLink="/privacy">Privacy Policy</a>
+        <a (click)="toggleActive('')" routerLink="/legalNotice">Legal notice</a>
     </footer>
 </section>
