--- a/src/app/kanban/kanban-edit/kanban-edit.component.scss
+++ b/src/app/kanban/kanban-edit/kanban-edit.component.scss
@@ -32,13 +32,14 @@
             right: 4em;
             height: 3em;
             width: 3em;
-            
+
             &:hover {
                 background-color: rgba(0, 0, 0, 0.078);
                 border-radius: 50px;
             }
         }
-        .testzwecken{
+
+        .testzwecken {
             z-index: 1000;
             position: absolute;
             display: flex;
@@ -46,6 +47,7 @@
             justify-content: space-between;
             top: 3em;
         }
+
         .overlay-content-wrapper {
             display: flex;
             flex-direction: column;
@@ -79,13 +81,16 @@
                             font-size: 16px;
                             resize: none;
                             border: 2px solid rgba(0, 0, 0, 0.214);
+
                             &:focus {
-                                border: 2px solid #29ABE2;
+                                border: 1px solid #29ABE2;
                             }
                         }
+
                         textarea {
                             height: 84px;
                         }
+
                         span {
                             color: rgba(0, 0, 0, 0.746);
                             font-size: 18px;
@@ -110,19 +115,22 @@
                         display: flex;
                         justify-content: space-evenly;
                         padding-bottom: 4em;
-                        
-                        .active-urgent{
+
+                        .active-urgent {
                             background-color: #FF3D00;
                             color: white;
                         }
-                        .active-medium{
+
+                        .active-medium {
                             background-color: #ffa800;
                             color: white;
                         }
-                        .active-low{
+
+                        .active-low {
                             background-color: #7ae229;
                             color: white;
                         }
+
                         button {
                             display: flex;
                             gap: 5px;
@@ -151,26 +159,30 @@
                     }
 
                     .all-user-container {
-                        select {
+                        mat-select {
                             display: flex;
                             align-items: center;
-                            justify-content: space-between;
                             border: 2px rgba(0, 0, 0, 0.346) solid;
                             width: 100%;
                             border-radius: 10px;
                             height: 48px;
                             font-size: 16px;
+                            overflow-x: hidden;
 
                             &:hover {
                                 border: 2px rgba(0, 0, 0, 0.694) solid;
                             }
 
-                        }
-                        option:hover {
-                                background-color: #ffffff;
-                                color: #333;
-                                padding: 8px;
+                            &:focus {
+                                border: 1px #29ABE2 solid;
                             }
+
+                        }
+
+                        mat-option {
+                            display: flex;
+                            flex-direction: row-reverse;
+                        }
                     }
                 }
 
@@ -191,44 +203,54 @@
                         border-radius: 10px;
                         width: 100%;
                         height: 48px;
-                        input{
+
+                        input {
                             width: 100%;
                             padding: 1em;
                             height: 100%;
                             border: transparent;
                             font-size: 16px;
                             background-color: transparent;
-                            &:focus{
+
+                            &:focus {
                                 border-radius: 10px;
                             }
                         }
-                        .add,.submit-cancel{
+
+                        .add,
+                        .submit-cancel {
                             display: flex;
                             align-items: center;
                             position: absolute;
                             right: 1em;
                             cursor: pointer;
                         }
-                        .add{
+
+                        .add {
                             z-index: -10;
                             height: 100%;
-                            img{
-                            &:hover{
-                                background-color: rgba(0, 0, 0, 0.091);
-                                border-radius: 50px;
-                            }
+
+                            img {
+                                &:hover {
+                                    background-color: rgba(0, 0, 0, 0.091);
+                                    border-radius: 50px;
+                                }
                             }
                         }
-                        .submit-cancel{
+
+                        .submit-cancel {
                             z-index: 1000;
-                            img{
+
+                            img {
                                 z-index: -10;
-                            &:hover{
-                                background-color: rgba(0, 0, 0, 0.091);
-                                border-radius: 50px;
+
+                                &:hover {
+                                    background-color: rgba(0, 0, 0, 0.091);
+                                    border-radius: 50px;
+                                }
                             }
-                            }
-                            .grey-line{
+
+                            .grey-line {
                                 width: 2px;
                                 height: 24px;
                                 background-color: rgba(128, 128, 128, 0.41);
@@ -261,5 +283,31 @@
                 }
             }
         }
+    }
+}
+
+.mat-mdc-option:focus.mdc-list-item,
+.mat-mdc-option.mat-mdc-option-active.mdc-list-item {
+    display: flex;
+    flex-direction: row-reverse;
+    background-color: #2a3647;
+    color: white;
+    border-radius: 0.5em;
+
+
+
+    &:hover {
+        background-color: #091931;
+    }
+}
+
+.mat-mdc-option.mdc-list-item {
+    display: flex;
+    flex-direction: row-reverse;
+    background: white;
+
+    &:hover {
+        background: #eeeeee;
+        border-radius: 0.5em;
     }
 }
