--- a/src/app/kanban/kanban-board/kanban-board.component.scss
+++ b/src/app/kanban/kanban-board/kanban-board.component.scss
@@ -178,6 +178,7 @@ section {
 
     .search-button {
         width: 50px;
+        right: 160px;
         position: absolute;
         background: none;
         border: none;
