--- a/src/app/kanban/kanban-board/card/card.component.scss
+++ b/src/app/kanban/kanban-board/card/card.component.scss
@@ -1,150 +1,181 @@
 section {
-    margin-top: 20px;
-    display: flex;
-    flex-direction: column;
+	margin-top: 20px;
+	display: flex;
+	flex-direction: column;
 
-    @media (max-width: 965px) {
-        flex-direction: unset;
+	@media (max-width: 965px) {
+		flex-direction: unset;
 
-    }
+	}
 
 }
 
 .testcontainer {
-    cursor: pointer;
-    user-select: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    margin-bottom: 10px;
-    padding: 18px;
-    border-radius: 20px;
-    width: 100%;
-    background-color: rgb(255, 255, 255);
-    height: 244px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    box-shadow: 0 6px 0 rgba(0, 0, 0, 0.02);
-    transition: ease-in-out 0.2s;
+	cursor: pointer;
+	user-select: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	margin-bottom: 10px;
+	padding: 18px;
+	border-radius: 20px;
+	width: 100%;
+	background-color: rgb(255, 255, 255);
+	height: 244px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	box-shadow: 0 6px 0 rgba(0, 0, 0, 0.02);
+	transition: ease-in-out 0.2s;
 
-    @media (max-width: 965px) {
-        width: 300px;
-        align-items: start;
-    }
+	@media (max-width: 965px) {
+		width: 300px;
+		align-items: start;
+	}
 
-        @media (max-width: 358px) {
-        width: 250px;
-        align-items: start;
-    }
-
-
+	@media (max-width: 358px) {
+		width: 250px;
+		align-items: start;
+	}
 
 
-    &:hover {
-        box-shadow: 0 0 6px rgba(42, 54, 71, 0.3);
-    }
 
-    .category {
-        font-size: 16px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 125px;
-        height: 27px;
-        border-radius: 5px;
-        margin-bottom: 12px;
-    }
 
-    .description {
-        color: rgb(143, 143, 143);
-        font-weight: 500;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        width: 100%;
-    }
+	&:hover {
+		box-shadow: 0 0 6px rgba(42, 54, 71, 0.3);
+	}
 
-    .user-priority {
-        display: flex;
-        justify-content: space-between;
+	.category {
+		font-size: 16px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 125px;
+		height: 27px;
+		border-radius: 5px;
+		margin-bottom: 12px;
+	}
 
-        .user {
-            display: flex;
-            align-items: center;
-        }
-    }
+	.description {
+		color: rgb(143, 143, 143);
+		font-weight: 500;
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		width: 100%;
+	}
 
-    .urgent {
-        width: 32px;
-        height: 32px;
-        background-image: url("../../../../../public/assets/img/kanban-edit-overlay/urgent-arrow.svg");
-        background-repeat: no-repeat;
-        background-position: center;
-    }
+	.user-priority {
+		display: flex;
+		justify-content: space-between;
 
-    .medium {
-        width: 32px;
-        height: 32px;
-        background-image: url("../../../../../public/assets/img/kanban-edit-overlay/medium-arrow.svg");
-        background-repeat: no-repeat;
-        background-position: center;
-    }
+		.user {
+			display: flex;
+			align-items: center;
+		}
+	}
 
-    .low {
-        width: 32px;
-        height: 32px;
-        background-image: url("../../../../../public/assets/img/kanban-edit-overlay/low-arrow.svg");
-        background-repeat: no-repeat;
-        background-position: center;
-    }
+	.urgent {
+		width: 32px;
+		height: 32px;
+		background-image: url("../../../../../public/assets/img/kanban-edit-overlay/urgent-arrow.svg");
+		background-repeat: no-repeat;
+		background-position: center;
+	}
+
+	.medium {
+		width: 32px;
+		height: 32px;
+		background-image: url("../../../../../public/assets/img/kanban-edit-overlay/medium-arrow.svg");
+		background-repeat: no-repeat;
+		background-position: center;
+	}
+
+	.low {
+		width: 32px;
+		height: 32px;
+		background-image: url("../../../../../public/assets/img/kanban-edit-overlay/low-arrow.svg");
+		background-repeat: no-repeat;
+		background-position: center;
+	}
 
 }
 
 .management {
-    background-color: rgb(208, 127, 255);
+	background-color: rgb(208, 127, 255);
 }
 
 .entwicklung {
-    background-color: rgb(127, 204, 255);
+	background-color: rgb(127, 204, 255);
 }
 
 .design {
-    background-color: rgb(127, 255, 212);
+	background-color: rgb(127, 255, 212);
 }
 
 .devops {
-    background-color: rgb(255, 210, 127);
+	background-color: rgb(255, 210, 127);
 }
 
 .dokumentation {
-    background-color: rgb(255, 127, 127);
+	background-color: rgb(255, 127, 127);
 }
 
 .initials {
-    font-size: 12px;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 32px;
-    width: 32px;
-    border-radius: 50px;
-    background-color: rgb(random(256), random(256), random(256));
-    border: solid 2px rgb(255, 255, 255);
-    margin-left: -8px;
+	font-size: 12px;
+	color: white;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 32px;
+	width: 32px;
+	border-radius: 50px;
+	background-color: rgb(random(256), random(256), random(256));
+	border: solid 2px rgb(255, 255, 255);
+	margin-left: -8px;
 }
 
 .user-content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	width: 100%;
 }
 
 
 .user-area {
-    display: flex;
-    align-items: center;
-    gap: -20px;
+	display: flex;
+	align-items: center;
+	gap: -20px;
+}
+
+.subtask-progress-row {
+	display: flex;
+	align-items: center;
+	gap: 12px;
+	margin-bottom: 12px;
+}
+
+.subtask-progress-bar {
+	flex: 1 1 0%;
+	height: 8px;
+	background: #e0e0e0;
+	border-radius: 4px;
+	overflow: hidden;
+	min-width: 60px;
+	max-width: 140px;
+}
+
+.subtask-progress-bar-fill {
+	height: 100%;
+	background: #2563eb;
+	border-radius: 4px;
+	transition: width 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subtask-progress-label {
+	font-size: 14px;
+	color: #222;
+	white-space: nowrap;
+	font-weight: 500;
 }
