--- a/src/app/kanban/kanban-edit/kanban-edit.component.scss
+++ b/src/app/kanban/kanban-edit/kanban-edit.component.scss
@@ -168,6 +168,7 @@
                             height: 48px;
                             font-size: 16px;
                             overflow-x: hidden;
+                            color: white;
 
                             &:hover {
                                 border: 2px rgba(0, 0, 0, 0.694) solid;
@@ -177,11 +178,6 @@
                                 border: 1px #29ABE2 solid;
                             }
 
-                        }
-
-                        mat-option {
-                            display: flex;
-                            flex-direction: row-reverse;
                         }
                     }
                 }
@@ -292,7 +288,6 @@
     flex-direction: row-reverse;
     background-color: #2a3647;
     color: white;
-    border-radius: 0.5em;
 
 
 
@@ -308,6 +303,5 @@
 
     &:hover {
         background: #eeeeee;
-        border-radius: 0.5em;
     }
 }
