--- a/src/app/kanban/kanban-board/kanban-board.component.html
+++ b/src/app/kanban/kanban-board/kanban-board.component.html
@@ -16,7 +16,6 @@
       <div class="mobileDiv">
         <h1>Board</h1>
         <button class="add-task-button">+</button>
-
       </div>
 
       <div class="search-input">
@@ -30,29 +29,18 @@
 
 
     <div class="board">
-
       <div class="task-column">
         <div class="add-area">
           <h3>To do</h3> <button class="small-add-task-button">+</button>
         </div>
-
-        <div class="task-columns" cdkDropList [cdkDropListData]="tasksSearchAndStatus('to do', searchValue)"
-          (cdkDropListDropped)="drop($event)" id="to do">
-          @if (tasksSearchAndStatus('to do', searchValue).length === 0)
-          {
-          <div class="no-task-place-holder">
-            No tasks to do
-          </div>
+        <div class="task-columns" cdkDropList [cdkDropListData]="tasksSearchAndStatus('to do', searchValue)" [cdkDropListConnectedTo]="['in progress', 'await feedback', 'done']" (cdkDropListDropped)="drop($event)" id="to do">
+          @if (tasksSearchAndStatus('to do', searchValue).length === 0) {
+            <div class="no-task-place-holder">No tasks to do</div>
           } @else {
-          @for (task of tasksSearchAndStatus('to do', searchValue); track $index) {
-          <app-card id="card-desktop" [cdkDragData]="task" [task]="task" (click)="boardService.openFullCard(task) "
-            cdkDrag></app-card>
-          <app-card class="card-mobile" (mousedown)="startDragMobile($event)" (touchstart)="startDragMobile($event)"
-            (mousemove)="onDragMobile($event)" (touchmove)="onDragMobile($event)" (mouseup)="endDragMobile()"
-            (mouseleave)="endDragMobile()" (touchend)="endDragMobile()" [task]="task"
-            (click)="!isDraggingMobile && boardService.openFullCard(task)"></app-card>
-
-          }
+            @for (task of tasksSearchAndStatus('to do', searchValue); track $index) {
+              <app-card id="card-desktop" [cdkDragData]="task" [task]="task" (click)="boardService.openFullCard(task)" cdkDrag></app-card>
+              <app-card class="card-mobile" (mousedown)="startDragMobile($event)" (touchstart)="startDragMobile($event)" (mousemove)="onDragMobile($event)" (touchmove)="onDragMobile($event)" (mouseup)="endDragMobile()" (mouseleave)="endDragMobile()" (touchend)="endDragMobile()" [task]="task" (click)="!isDraggingMobile && boardService.openFullCard(task)"></app-card>
+            }
           }
         </div>
       </div>
@@ -61,19 +49,14 @@
         <div class="add-area">
           <h3>In progress</h3> <button class="small-add-task-button">+</button>
         </div>
-        <div class="task-columns" cdkDropList [cdkDropListData]="tasksSearchAndStatus('in progress', searchValue)"
-          (cdkDropListDropped)="drop($event)" id="in progress">
+        <div class="task-columns" cdkDropList [cdkDropListData]="tasksSearchAndStatus('in progress', searchValue)" [cdkDropListConnectedTo]="['to do', 'await feedback', 'done']" (cdkDropListDropped)="drop($event)" id="in progress">
           @if (tasksSearchAndStatus('in progress', searchValue).length === 0) {
-          <div class="no-task-place-holder">No tasks to do</div>
+            <div class="no-task-place-holder">No tasks to do</div>
           } @else {
-          @for (task of tasksSearchAndStatus('in progress', searchValue); track $index) {
-          <app-card id="card-desktop" [cdkDragData]="task" [task]="task" (click)="boardService.openFullCard(task) "
-            cdkDrag></app-card>
-          <app-card class="card-mobile" (mousedown)="startDragMobile($event)" (touchstart)="startDragMobile($event)"
-            (mousemove)="onDragMobile($event)" (touchmove)="onDragMobile($event)" (mouseup)="endDragMobile()"
-            (mouseleave)="endDragMobile()" (touchend)="endDragMobile()" [task]="task"
-            (click)="!isDraggingMobile && boardService.openFullCard(task)"></app-card>
-          }
+            @for (task of tasksSearchAndStatus('in progress', searchValue); track $index) {
+              <app-card id="card-desktop" [cdkDragData]="task" [task]="task" (click)="boardService.openFullCard(task)" cdkDrag></app-card>
+              <app-card class="card-mobile" (mousedown)="startDragMobile($event)" (touchstart)="startDragMobile($event)" (mousemove)="onDragMobile($event)" (touchmove)="onDragMobile($event)" (mouseup)="endDragMobile()" (mouseleave)="endDragMobile()" (touchend)="endDragMobile()" [task]="task" (click)="!isDraggingMobile && boardService.openFullCard(task)"></app-card>
+            }
           }
         </div>
       </div>
@@ -82,19 +65,14 @@
         <div class="add-area">
           <h3>Await feedback</h3> <button class="small-add-task-button">+</button>
         </div>
-        <div class="task-columns" cdkDropList [cdkDropListData]="tasksSearchAndStatus('await feedback', searchValue)"
-          (cdkDropListDropped)="drop($event)" id="await feedback">
+        <div class="task-columns" cdkDropList [cdkDropListData]="tasksSearchAndStatus('await feedback', searchValue)" [cdkDropListConnectedTo]="['to do', 'in progress', 'done']" (cdkDropListDropped)="drop($event)" id="await feedback">
           @if (tasksSearchAndStatus('await feedback', searchValue).length === 0) {
-          <div class="no-task-place-holder">No tasks to do</div>
+            <div class="no-task-place-holder">No tasks to do</div>
           } @else {
-          @for (task of tasksSearchAndStatus('await feedback', searchValue); track $index) {
-          <app-card id="card-desktop" [cdkDragData]="task" [task]="task" (click)="boardService.openFullCard(task) "
-            cdkDrag></app-card>
-          <app-card class="card-mobile" (mousedown)="startDragMobile($event)" (touchstart)="startDragMobile($event)"
-            (mousemove)="onDragMobile($event)" (touchmove)="onDragMobile($event)" (mouseup)="endDragMobile()"
-            (mouseleave)="endDragMobile()" (touchend)="endDragMobile()" [task]="task"
-            (click)="!isDraggingMobile && boardService.openFullCard(task)"></app-card>
-          }
+            @for (task of tasksSearchAndStatus('await feedback', searchValue); track $index) {
+              <app-card id="card-desktop" [cdkDragData]="task" [task]="task" (click)="boardService.openFullCard(task)" cdkDrag></app-card>
+              <app-card class="card-mobile" (mousedown)="startDragMobile($event)" (touchstart)="startDragMobile($event)" (mousemove)="onDragMobile($event)" (touchmove)="onDragMobile($event)" (mouseup)="endDragMobile()" (mouseleave)="endDragMobile()" (touchend)="endDragMobile()" [task]="task" (click)="!isDraggingMobile && boardService.openFullCard(task)"></app-card>
+            }
           }
         </div>
       </div>
@@ -103,19 +81,14 @@
         <div class="add-area">
           <h3>Done</h3> <button class="small-add-task-button">+</button>
         </div>
-        <div class="task-columns" cdkDropList [cdkDropListData]="tasksSearchAndStatus('done', searchValue)"
-          (cdkDropListDropped)="drop($event)" id="done">
+        <div class="task-columns" cdkDropList [cdkDropListData]="tasksSearchAndStatus('done', searchValue)" [cdkDropListConnectedTo]="['to do', 'in progress', 'await feedback']" (cdkDropListDropped)="drop($event)" id="done">
           @if (tasksSearchAndStatus('done', searchValue).length === 0) {
-          <div class="no-task-place-holder">No tasks to do</div>
+            <div class="no-task-place-holder">No tasks to do</div>
           } @else {
-          @for (task of tasksSearchAndStatus('done', searchValue); track $index) {
-          <app-card id="card-desktop" [cdkDragData]="task" [task]="task" (click)="boardService.openFullCard(task) "
-            cdkDrag></app-card>
-          <app-card class="card-mobile" (mousedown)="startDragMobile($event)" (touchstart)="startDragMobile($event)"
-            (mousemove)="onDragMobile($event)" (touchmove)="onDragMobile($event)" (mouseup)="endDragMobile()"
-            (mouseleave)="endDragMobile()" (touchend)="endDragMobile()" [task]="task"
-            (click)="!isDraggingMobile && boardService.openFullCard(task)"></app-card>
-          }
+            @for (task of tasksSearchAndStatus('done', searchValue); track $index) {
+              <app-card id="card-desktop" [cdkDragData]="task" [task]="task" (click)="boardService.openFullCard(task)" cdkDrag></app-card>
+              <app-card class="card-mobile" (mousedown)="startDragMobile($event)" (touchstart)="startDragMobile($event)" (mousemove)="onDragMobile($event)" (touchmove)="onDragMobile($event)" (mouseup)="endDragMobile()" (mouseleave)="endDragMobile()" (touchend)="endDragMobile()" [task]="task" (click)="!isDraggingMobile && boardService.openFullCard(task)"></app-card>
+            }
           }
         </div>
       </div>
