Refactor Kanban edit to use @Input task binding
Refactored KanbanEditComponent to accept a task via @Input, removing reliance on internal task arrays and indices. Updated full-card component to embed KanbanEditComponent and pass the selected task. Adjusted template and logic in KanbanEditComponent to bind directly to the input task, simplifying state management and improving component reusability. Also commented out unused updateTaskStatus method in board.service.ts.

--- a/src/app/kanban/kanban-board/full-card/full-card.component.html
+++ b/src/app/kanban/kanban-board/full-card/full-card.component.html
@@ -55,35 +55,6 @@
       </div>
     </div>
 
-
-
-
-
-
-    <!--     <div class="input-assigned-to">
-      <span>Subtasks:</span>
-      <div class="subtask-priority">
-        @for (subtasks of task.subTaskFillTest; track $index) {
-          @switch (true) {
-            @case (subtasks.completed) {
-              <div class="subtask">
-                  <div (click)="subtasks.completed; debug()" class="checkbox"></div> {{subtasks.text}}
-              </div>
-                } @case(!subtasks.completed) {
-            }
-          }
-        }
-      </div>
-    </div>
- -->
-    <!--             <div class="input-assigned-to">
-      <span>Subtasks:</span>
-      <div class="user-priority">
-        <input type="checkbox" [(ngModel)]="task.subTask">
-      </div>
-    </div>
--->
-
     <div class="edit-delete-area">
 
       <div class="delete-container">
@@ -100,4 +71,6 @@
 
     </div>
   </div>
+
+  <app-kanban-edit [task]="task"></app-kanban-edit>
 </section>
