--- a/src/app/kanban/kanban-board/full-card/full-card.component.html
+++ b/src/app/kanban/kanban-board/full-card/full-card.component.html
@@ -64,7 +64,7 @@
 
       <div class="hyphen"></div>
 
-      <div class="edit-container">
+      <div class="edit-container"  (click)="boardService.toggleEditOverlay()">
         <div class="edit"></div>
         <p>Edit</p>
       </div>
@@ -72,5 +72,7 @@
     </div>
   </div>
 
+    @if (boardService.editOverlayActive == true) {
   <app-kanban-edit [task]="task"></app-kanban-edit>
+  }
 </section>
