--- a/src/app/kanban/kanban.component.scss
+++ b/src/app/kanban/kanban.component.scss
@@ -17,6 +17,7 @@
 .kanban-board-content {
     display: flex;
     width: 100%;
+    height: 100%;
     padding: 0em 4em;
     background: #f0f0f0;
     overflow-y: auto;
