--- a/src/app/kanban/kanban-add/kanban-add.component.scss
+++ b/src/app/kanban/kanban-add/kanban-add.component.scss
@@ -1,367 +1,380 @@
 .main-content {
-  display: flex;
-  height: 100dvh;
-  overflow-x: hidden;
+    display: flex;
+    height: 100dvh;
+    overflow-x: hidden;
 
-  @media (max-width: 965px) {
-    height: 92dvh;
-  }
+    @media (max-width: 965px) {
+        height: 92dvh;
+    }
 }
 
 .main-content-input {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 }
 
 section {
-  font-size: 10px;
+    font-size: 10px;
 }
 
 .content {
-  display: flex;
-  width: 100%;
-  height: 92dvh;
+    display: flex;
+    width: 100%;
+    height: 92dvh;
 
+    // ----------- Left Side ----------
+    .left-addtask {
+        width: 49%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
 
+        .left-content-wrapper {
+            display: flex;
+            flex-direction: column;
+            gap: 4em;
+            width: 80%;
 
-// ----------- Left Side ----------
-  .left-addtask {
+            .kanban-form {
+                display: flex;
+                flex-direction: column;
+                width: 100%;
+                gap: 30px;
+                bottom: 2.5em;
+
+                h1 {
+                    bottom: 1.5em;
+                    font-size: 6em;
+                }
+
+                .form-label {
+                    font-size: 1.6em;
+
+                    .required-asterisk {
+                        color: red;
+                        margin-right: 1em;
+                    }
+                }
+
+                .required-label {
+                    font-size: 1.6em;
+                    top: 10em;
+                }
+
+                .div-cont {
+                    display: flex;
+                    flex-direction: column;
+                    min-height: 64px;
+
+                    input,
+                    textarea {
+                        min-height: 48px;
+                        border-radius: 15px;
+                        padding: 0.5em;
+                        font-size: 16px;
+                        resize: none;
+                        border: 2px solid rgba(0, 0, 0, 0.049);
+
+                        &:focus {
+                            border: 2px solid #29abe2;
+                        }
+                    }
+
+                    textarea {
+                        height: 84px;
+                    }
+
+                    span {
+                        color: rgba(0, 0, 0, 0.746);
+                        font-size: 18px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.line {
+    top: 35dvh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 2px;
+    height: 30dvh;
+    background-color: rgba(0, 0, 0, 0.049);
+    margin: 0px 2px;
+}
+
+.user-feedback {
+    z-index: 4;
+    position: fixed;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    top: 50%;
+    left: 50%;
+    animation: fade-in-bottom-overlay-viewport 2s ease-in-out;
+}
+
+// ----------- Right Side ----------
+.right-addtask {
     width: 49%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 
-    .left-content-wrapper {
-      display: flex;
-      flex-direction: column;
-      gap: 4em;
-      width: 80%;
-
-      .kanban-form {
+    .right-content-wrapper {
         display: flex;
         flex-direction: column;
-        width: 100%;
-        gap: 30px;
-        bottom: 2.5em;
+        width: 80%;
+        top: 8em;
 
-        h1 {
-          bottom: 1.5em;
-          font-size: 6em;
-        }
+        .kanban-addtask-priority {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
 
-        .form-label {
-          font-size: 1.6em;
-
-          .required-asterisk {
-            color: red;
-            margin-right: 1em;
-          }
-        }
-
-
-        .required-label {
-          font-size: 1.6em;
-          top: 10em;
-        }
-
-        .div-cont {
-          display: flex;
-          flex-direction: column;
-          min-height: 64px;
-
-          input,
-          textarea {
-            min-height: 48px;
-            border-radius: 15px;
-            padding: 0.5em;
-            font-size: 16px;
-            resize: none;
-            border: 2px solid rgba(0, 0, 0, 0.049);
-
-            &:focus {
-              border: 2px solid #29abe2;
+            p {
+                font-size: 1.6em;
             }
-          }
 
-          textarea {
-            height: 84px;
-          }
+            .priority-buttons {
+                display: flex;
+                justify-content: space-between;
+                margin-bottom: 8em;
 
-          span {
-            color: rgba(0, 0, 0, 0.746);
-            font-size: 18px;
-          }
+                .active-urgent {
+                    background-color: #ff3d00;
+                    color: white;
+                }
+                .active-medium {
+                    background-color: #ffa800;
+                    color: white;
+                }
+                .active-low {
+                    background-color: #7ae229;
+                    color: white;
+                }
+
+                button {
+                    display: flex;
+                    gap: 0.4em;
+                    background-color: white;
+                    border: solid rgba(0, 0, 0, 0.049) 2px;
+                    border-radius: 10px;
+                    font-size: 20px;
+                    padding: 10px 16px;
+                    transition: box-shadow 0.3s ease;
+
+                    img {
+                        width: 20px;
+                    }
+
+                    &:hover {
+                        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+                    }
+                }
+            }
         }
-      }
+
+        .kanban-assigned-to {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+
+            .assigned-span {
+                font-size: 1.6em;
+            }
+
+            .all-user-container {
+                width: 100%;
+
+                mat-select {
+                    display: flex;
+                    align-items: center;
+                    border: 2px rgba(0, 0, 0, 0.346) solid;
+                    width: 100%;
+                    border-radius: 10px;
+                    height: 48px;
+                    font-size: 16px;
+                    overflow-x: hidden;
+                    color: white;
+
+                    &:hover {
+                        border: 2px rgba(0, 0, 0, 0.694) solid;
+                    }
+
+                    &:focus {
+                        border: 1px #29abe2 solid;
+                    }
+                }
+
+                // .select-to-assign {
+                //   display: flex;
+                //   align-items: center;
+                //   justify-content: space-between;
+                //   background-color: white;
+                //   border: 2px rgba(0, 0, 0, 0.049) solid;
+                //   padding: 1em;
+                //   border-radius: 10px;
+                //   height: 48px;
+                //   font-size: 16px;
+
+                //   &:hover {
+                //     border: 2px rgba(0, 0, 0, 0.694) solid;
+                //   }
+                // }
+            }
+        }
+
+        .kanban-overlay-subtask {
+            width: 100%;
+            padding-top: 3em;
+
+            .subtask-span {
+                font-size: 16px;
+                padding-bottom: 0.4em;
+            }
+
+            .subtaskfield {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                background-color: white;
+                padding: 1em;
+                font-size: 16px;
+                height: 48px;
+                border: 2px solid rgba(0, 0, 0, 0.049);
+                border-radius: 10px;
+            }
+        }
+
+        .each-sub-task {
+            display: flex;
+            justify-content: flex-end;
+            margin-top: 10em;
+            gap: 1.5em;
+
+            .clear {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background-color: transparent;
+                border: solid rgba(0, 0, 0, 0.049) 2px;
+                border-radius: 10px;
+                font-size: 1.8em;
+                padding: 8px 10px;
+                transition: box-shadow 0.3s ease;
+
+                img {
+                    margin-left: 0.5em;
+                }
+
+                &:hover {
+                    color: #29abe2;
+                    border: 2px #29abe2 solid;
+                    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+                }
+            }
+
+            .create-task {
+                color: white;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background-color: #2a3647;
+                border: solid rgba(0, 0, 0, 0.049) 2px;
+                border-radius: 10px;
+                font-size: 1.8em;
+                padding: 10px 18px;
+                transition: box-shadow 0.3s ease;
+
+                img {
+                    margin-left: 0.5em;
+                }
+
+                &:hover {
+                    background-color: #29abe2;
+                    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+                }
+            }
+        }
     }
-  }
 }
-
-.line {
-  top: 35dvh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 2px;
-  height: 30dvh;
-  background-color: rgba(0, 0, 0, 0.049);
-  margin: 0px 2px;
-}
-
-
-.user-feedback{
-  z-index: 4;
-  position: fixed;
-  display: none;
-  justify-content: center;
-  align-items: center;
-  top: 50%;
-  left: 50%;
-  animation: fade-in-bottom-overlay-viewport 2s ease-in-out;
-}
-
-
-
-// ----------- Right Side ----------
-.right-addtask {
-  width: 49%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  .right-content-wrapper {
-    display: flex;
-    flex-direction: column;
-    width: 80%;
-    top: 8em;
-
-    .kanban-addtask-priority {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-
-      p {
-        font-size: 1.6em;
-      }
-
-      .priority-buttons {
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: 8em;
-
-        .active-urgent {
-          background-color: #ff3d00;
-          color: white;
-        }
-        .active-medium {
-          background-color: #ffa800;
-          color: white;
-        }
-        .active-low {
-          background-color: #7ae229;
-          color: white;
-        }
-
-        button {
-          display: flex;
-          gap: 0.4em;
-          background-color: white;
-          border: solid rgba(0, 0, 0, 0.049) 2px;
-          border-radius: 10px;
-          font-size: 20px;
-          padding: 10px 16px;
-          transition: box-shadow 0.3s ease;
-
-          img {
-            width: 20px;
-          }
-
-          &:hover {
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-          }
-        }
-      }
-    }
-
-    .kanban-assigned-to {
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-
-      .assigned-span {
-        font-size: 1.6em;
-      }
-
-      .all-user-container {
-        width: 100%;
-
-        .select-to-assign {
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-          background-color: white;
-          border: 2px rgba(0, 0, 0, 0.049) solid;
-          padding: 1em;
-          border-radius: 10px;
-          height: 48px;
-          font-size: 16px;
-
-          &:hover {
-            border: 2px rgba(0, 0, 0, 0.694) solid;
-          }
-        }
-      }
-    }
-
-    .kanban-overlay-subtask {
-      width: 100%;
-      padding-top: 3em;
-
-      .subtask-span {
-        font-size: 16px;
-        padding-bottom: 0.4em;
-      }
-
-      .subtaskfield {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        background-color: white;
-        padding: 1em;
-        font-size: 16px;
-        height: 48px;
-        border: 2px solid rgba(0, 0, 0, 0.049);
-        border-radius: 10px;
-      }
-    }
-
-    .each-sub-task {
-      display: flex;
-      justify-content: flex-end;
-      margin-top: 10em;
-      gap: 1.5em;
-
-      .clear {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: transparent;
-        border: solid rgba(0, 0, 0, 0.049) 2px;
-        border-radius: 10px;
-        font-size: 1.8em;
-        padding: 8px 10px;
-        transition: box-shadow 0.3s ease;
-
-        img {
-          margin-left: 0.5em;
-        }
-
-        &:hover {
-          color: #29abe2;
-          border: 2px #29abe2 solid;
-          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-        }
-      }
-
-      .create-task {
-        color: white;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: #2a3647;
-        border: solid rgba(0, 0, 0, 0.049) 2px;
-        border-radius: 10px;
-        font-size: 1.8em;
-        padding: 10px 18px;
-        transition: box-shadow 0.3s ease;
-
-        img {
-          margin-left: 0.5em;
-        }
-
-        &:hover {
-          background-color: #29abe2;
-          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-        }
-      }
-    }
-  }
-}
-
 
 // -------- Other Components ----------
 .contact-list-content {
-  display: flex;
-  height: 90%;
+    display: flex;
+    height: 90%;
 }
 
 .contact-list-component {
-  display: flex;
-  height: auto;
-
-  @media (max-width: 750px) {
-    width: 100%;
-  }
-
-  @media (min-width: 750px) {
     display: flex;
-  }
+    height: auto;
+
+    @media (max-width: 750px) {
+        width: 100%;
+    }
+
+    @media (min-width: 750px) {
+        display: flex;
+    }
 }
 
 .hidden {
-  display: none;
+    display: none;
 }
 
 .info-screen-component {
-  height: auto;
-  width: 100%;
+    height: auto;
+    width: 100%;
 
-  @media (max-width: 750px) {
-    display: none;
-  }
+    @media (max-width: 750px) {
+        display: none;
+    }
 }
 
 .app-info-screen-mobile-component {
-  width: 100%;
+    width: 100%;
 
-  @media (min-width: 750px) {
-    display: none;
-  }
+    @media (min-width: 750px) {
+        display: none;
+    }
 }
 
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 input[type="number"] {
-  appearance: textfield;
+    appearance: textfield;
 }
 
 .createdContact {
-  z-index: 4;
-  width: 15em;
-  height: 4em;
-  position: fixed;
-  top: 80%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: none;
-  justify-content: center;
-  align-items: center;
-  font-size: 16px;
-  border-radius: 14px;
-  border: 1px solid black;
-  background-color: #2a3647;
-  color: white;
-  box-shadow: 0 4px 0 rgba(0, 0, 0, 0.15);
-  animation: fade-in-left-overlay-viewport 2s ease-in-out;
+    z-index: 4;
+    width: 15em;
+    height: 4em;
+    position: fixed;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    border-radius: 14px;
+    border: 1px solid black;
+    background-color: #2a3647;
+    color: white;
+    box-shadow: 0 4px 0 rgba(0, 0, 0, 0.15);
+    animation: fade-in-left-overlay-viewport 2s ease-in-out;
 }
 
 .display {
-  display: flex;
+    display: flex;
 }
