Refactor subtask and assigned user handling in card components
Updated the TaskItemBoard interface to use a Map for subTaskFillTest and simplified assignedTo structure. Adjusted card and full-card components to accommodate these changes, including updates to template logic and subtask toggling. Commented out user display in card templates and improved subtask iteration in full-card templates.

--- a/src/app/kanban/kanban-board/card/card.component.html
+++ b/src/app/kanban/kanban-board/card/card.component.html
@@ -19,9 +19,9 @@
     
     <div class="user-content">
       <div class="user-area">
-        @for (user of task.assignedTo; track $index) {
+        <!-- @for (user of task.assignedTo; track $index) {
         <div class="user initials">{{ user.user.slice(0, 2).toLocaleUpperCase()}}</div>
-        }
+        } -->
       </div>
 
       <div class="user-priority">
