Refactor subtask and assigned user handling in Kanban board
Updated the TaskItemBoard interface to use arrays for assigned users and subtasks instead of Maps. Refactored FullCardComponent and related templates to simplify subtask rendering and toggling logic, and improved display of assigned user details. Removed unused code and commented-out lines for clarity.

--- a/src/app/kanban/kanban-edit/kanban-edit.component.html
+++ b/src/app/kanban/kanban-edit/kanban-edit.component.html
@@ -102,7 +102,7 @@
                                 </li>
                             }@else {
                                 <li (dblclick)="startEditingSubtask($index)">
-                                    {{ this.task.subTaskFillTest[$index].text}}
+                                    <!-- {{ this.task.subTaskFillTest[$index].text}} -->
                                 </li>
                             }
                         }
