--- a/src/app/kanban/kanban-board/full-card/full-card.component.html
+++ b/src/app/kanban/kanban-board/full-card/full-card.component.html
@@ -29,8 +29,8 @@
       <div class="user-priority">
         @for (user of task.assignedTo; track $index) {
         <div class="user-details">
-          <div class="user initials"><!--{{ user.user.slice(0, 2).toLocaleUpperCase()}} --></div>
-          <div class="user-name"><!--{{user.user}}--></div>
+          <div class="user initials" [style.background]= user.color>{{ user.initials}} </div>
+          <div class="user-name">{{user.firstName}}{{user.lastName}}</div>
         </div>
 
         }
@@ -41,14 +41,14 @@
     <div class="input-assigned-to">
       <span>Subtasks:</span>
       <div class="subtask-priority">
-        @for (subtask of subTasks; track $index) {
-          @if (subtask.completed == true) {
+        @for (subtasks of task.subTaskFillTest; track $index) {
+          @if (subtasks.completed == true) {
             <div class="subtask">
-              <div (click)="toggleCheckbox($index)" class="checkbox-active"></div> {{subtask.text}}
+              <div (click)="toggleCheckbox($index)" class="checkbox-active"></div> {{subtasks.text}}
             </div>
             } @else {
             <div class="subtask">
-              <div (click)="toggleCheckbox($index)" class="checkbox"></div> {{subtask.text}}
+              <div (click)="toggleCheckbox($index)" class="checkbox"></div> {{subtasks.text}}
             </div>
           }
         }
