Enable task creation via form binding
Added two-way binding for task fields in the add task form and integrated form data with the BoardService. Updated TaskItemBoard interface to require title, and removed commented dummy tasks from board.service.ts for cleanup.

--- a/src/app/kanban/kanban-add/kanban-add.component.html
+++ b/src/app/kanban/kanban-add/kanban-add.component.html
@@ -4,25 +4,25 @@
         <app-header></app-header>
         <section>
             <div class="content">
-                <form class="kanban-form">
+                <form class="kanban-form" #addTaskForm="ngForm">
                     <h1>Add Task</h1>
                     <div class="form-title div-cont">
                         <label>
                             Title<span class="required-asterisk">*</span>
                         </label>
-                        <input placeholder="Enter a title" type="text" />
+                        <input [(ngModel)]="taskList.title" placeholder="Enter a title" type="text" />
                     </div>
                     <div class="form-description div-cont">
                         <label>
                             Description<span class="required-asterisk">*</span>
                         </label>
-                        <textarea placeholder="Enter a Description " name="" id=""></textarea>
+                        <textarea [(ngModel)]="taskList.description" placeholder="Enter a Description " name="" id=""></textarea>
                     </div>
                     <div class="form-date div-cont">
                         <label>
                             Due date<span class="required-asterisk">*</span>
                         </label>
-                        <input type="date" />
+                        <input [(ngModel)]="taskList.dueDate" type="date" />
                     </div>
                     <label class="form-label">
                         This field is required<span class="required-asterisk">*</span>
